--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@types/socket.io-client": "^3.0.0",
     "rxjs": "~6.6.0",
+    "socket.io-client": "^4.1.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
